--- a/src/components/calendar/footer/index.module.css
+++ b/src/components/calendar/footer/index.module.css
@@ -122,6 +122,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 1px;
+  cursor: pointer;
 }
 .btn-mobile {
   display: none;
